--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Edric John Cruz Nacpil
 theme: jekyll-theme-tactile 
-description: Tidbits on a life in progress.
+description: Tidbits of a life in progress.
